# holak-teams

./: .gitignore  AGENT-RUNTIME-PARITY.md  AGENTS.md  INSTALL.md  README.md  RELEASE.md  agents-roster.html  package-lock.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: validate-argus.yml
argus/: AUTHORIZATION-POLICY.md  BROWSER-ISOLATION.md  CANONICAL-CONTRACTS.md  COLOR-SCHEME.md  ENGAGEMENT-POLICY.md  MODEL-POLICY.md  README.md  SHARED-DOCTRINE.md  TEMPLATE-CONTRACT.md  model-benchmark-scenarios.json  model-policy.json  orchestration-plan.json  prompt-budgets.json  prompt-engagement-contract.json  raci.json  runtime-adapters.json  runtime-assets.source.json  team-graph.html  technique-catalogs.bundle.b64
argus/capabilities/: capability-matrix.json
argus/claude/: aegis.md  antigone.md  aristarchus.md  atalanta.md  kleio.md  minos.md  nike.md  odysseus.md  runtime-assets.json  runtime-reference-inventory.json
argus/framework-template-python/: README.md  argus-template.json  conftest.py  pyproject.toml  run-tests.sh
argus/framework-template-python/ai_agents_internal/: README.md
argus/framework-template-python/scripts/: quarantine-contract.sh
argus/framework-template-python/solution/: STATE_MODEL.md
argus/framework-template-python/solution/findings/: README.md
argus/framework-template-python/src/qa/: __init__.py  api_client.py  config.py
argus/framework-template-python/tests/db/: test_integrity_smoke.py
argus/framework-template-python/tests/perf/: test_budget_smoke.py
argus/framework-template-python/tests/regression/: README.md
argus/framework-template-python/tests/security/: test_access_smoke.py
argus/framework-template-python/tests/setup/: auth_setup.py
argus/framework-template-python/tests/ui/: test_example_ui.py
hephaestus/: README.md  team-graph.html
scripts/: benchmark-argus-model-policy.mjs  check-argus-prompts.mjs  refactor-argus-prompts.mjs  release-plugin.mjs  smoke-agent-runtime-parity.sh  smoke-argus-asset-consumers.mjs  smoke-argus-assets.sh  smoke-argus-authorization.sh  smoke-argus-browser-policy.sh  smoke-argus-bug-coverage-parser.sh  smoke-argus-coverage.sh  smoke-argus-engagement-state.mjs  smoke-argus-engagement.sh  smoke-argus-generator-ownership.sh  smoke-argus-launcher.sh  smoke-argus-model-policy.sh  smoke-argus-model-routing.mjs  smoke-argus-orchestration-plan.mjs  smoke-argus-preflight.sh  smoke-argus-raci.sh  smoke-argus-role-variants.sh  smoke-argus-run.sh  smoke-argus-runner-contract.sh  smoke-argus-schemas.sh  smoke-argus-technique-catalogs.sh  smoke-argus-technique-selection.sh  smoke-argus-templates.sh  smoke-marketplace-contracts.sh  smoke-marketplace-lifecycle.sh  smoke-prompt-regression.sh  sync-argus-model-policy.mjs  sync-argus-raci.mjs  sync-argus-role-variants.mjs  sync-argus-runtime-assets.mjs  sync-argus-technique-bundle.mjs  sync-hephaestus-codex-variants.mjs  validate-argus-schemas.mjs  validate-argus-technique-catalogs.mjs  validate-marketplace-contracts.mjs  validate-release.sh  (+3 more)
(+504 files in other folders)
